sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Sales_Notes_for_Menu_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Notes_for_Menu_Team__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: Indicates any notes to the menu team.</description>
    <inlineHelpText>Please add any notes to the menu team</inlineHelpText>
    <label>Sales Notes for Menu Team</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>