sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Seattle_Dasher_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Seattle_Dasher_Requirements__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It indicates seattle dasher requirements.</description>
    <inlineHelpText>ID provided by the Merchant</inlineHelpText>
    <label>Seattle Dasher Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>