sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Starting_Point__c.field-meta.xml
<CustomField>
    <fullName>Starting_Point__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-18245: This field represents the starting point of the store.</description>
    <inlineHelpText>Indicates the starting point of the store.</inlineHelpText>
    <label>Starting Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>