sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Starting_Point_ID__c.field-meta.xml
<CustomField>
    <fullName>Starting_Point_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-18245: Represents the Starting Point ID of the store.</description>
    <inlineHelpText>Indicates the Starting Point ID of the store.</inlineHelpText>
    <label>Starting Point ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>