sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It indicates state.</description>
    <label>State/Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>