sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Store_Detail__c.field-meta.xml
<CustomField>
    <fullName>Store_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store Detail</label>
    <referenceTo>Store_Detail__c</referenceTo>
    <relationshipLabel>Store Details</relationshipLabel>
    <relationshipName>Store_Details</relationshipName>
    <type>Lookup</type>
</CustomField>