sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Storefront_Match_Branded_Website__c.field-meta.xml
<CustomField>
    <fullName>Storefront_Match_Branded_Website__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It indicates storefront match branded website.</description>
    <label>Storefront Match Branded Website?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>