sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Storefront_Mx_Has_Website__c.field-meta.xml
<CustomField>
    <fullName>Storefront_Mx_Has_Website__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It indicates storefront mx has website.</description>
    <label>Storefront Mx Has Website?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>