sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Storefront_Proposed_Date_of_Impl__c.field-meta.xml
<CustomField>
    <fullName>Storefront_Proposed_Date_of_Impl__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It is used to store proposed date of implementation.</description>
    <inlineHelpText>This is the Proposed Date of Implementation for Storefront</inlineHelpText>
    <label>Proposed Date of Implementation</label>
    <type>Date</type>
</CustomField>