sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Storefront_Website__c.field-meta.xml
<CustomField>
    <fullName>Storefront_Website__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It indicates storefront website.</description>
    <label>Storefront Website</label>
    <type>Url</type>
</CustomField>