sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Submarket__c.field-meta.xml
<CustomField>
    <fullName>SubMarket__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-13402: It represents the sub-market of the store and would be populated by Mulesoft.</description>
    <label>Submarket</label>
    <referenceTo>Submarket__c</referenceTo>
    <relationshipLabel>Store Details</relationshipLabel>
    <relationshipName>Store_Details</relationshipName>
    <type>Lookup</type>
</CustomField>