sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Tablet_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Tablet_Delivery_Method__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: Signifies the delivery method of the tablet.</description>
    <inlineHelpText>Signifies the delivery method of the tablet</inlineHelpText>
    <label>Tablet Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local Team Drop-off</fullName>
            </value>
            <value>
                <fullName>Drop-ship</fullName>
            </value>
            <value>
                <fullName>None - Use Existing Tablet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>