sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-23067: it is used to store Tax ID.</description>
    <label>Tax ID</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>