sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Tax_Override_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Override_Rate__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: Indicates any local sales tax.</description>
    <inlineHelpText>Indicates any local sales tax</inlineHelpText>
    <label>Tax Override Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>