sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Time_Zone_Backend__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone_Backend__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-18245: It indicates the time zone value based on address to be populated by Mulesoft.</description>
    <label>Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>