sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: Onboarding event type.</description>
    <inlineHelpText>Onboarding event type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Work_Order_Type</valueSetName>
    </valueSet>
</CustomField>