sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/User_Entered_Address__c.field-meta.xml
<CustomField>
    <fullName>User_Entered_Address__c</fullName>
    <description>LEM-18245: It holds the address value entered by the user.</description>
    <label>User Entered Address</label>
    <type>Address</type>
</CustomField>