sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Website_Creation_Needed_for_Storefront__c.field-meta.xml
<CustomField>
    <fullName>Website_Creation_Needed_for_Storefront__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It indicates website creation needed for storefront.</description>
    <label>Website Creation Needed for Storefront?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>