sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>zip_Postal_Code__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It indicates zip/Postal Code.</description>
    <label>zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>